<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="userVM"
            type="raulsvilar.desafiomundipagg.viewmodel.UserViewModel"/>
        </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="raulsvilar.desafiomundipagg.view.fragments.SignInFragment">



        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:text="@={userVM.userEmail}"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={userVM.userPassword}"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="@{() -> userVM.authenticateUser()}"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{!userVM.loading ? View.VISIBLE : View.GONE}"
            android:id="@+id/button3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:visibility="@{userVM.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>

